Wrote some more

--- a/litreview.Rmd
+++ b/litreview.Rmd
@@ -557,11 +557,22 @@ I believe this list maps fairly well onto interactive data visualization systems
 
 ### Visual perception {#visual-perception}
 
-Another important research topic in data visualization is visual perception. Specifically, given that we use visual attributes such as position, color, length, or area to encode various aspects of our data, researchers have tried to answer the question of how to use these attributes in a way that best leverages the human visual system. Fortunately, this research has been quite fruitful, yielding precise and actionable guidelines [for a review, see @franconeri2021; @quadri2021].
+Another broad and important research topic in data visualization is visual perception. By engaging the human visual system, graphs serve as information channels, with varying throughput based on their inherent attributes. To maximize the effectiveness of visualizations, researchers have spent significant amount of effort figuring out best ways to engage the visual system. Fortunately, this has been quite fruitful, yielding many precise and actionable guidelines [for a review, see e.g. @franconeri2021; @quadri2021; @vanderplas2020].
 
-A landmark work in this area has been that of @cleveland1984. In this study, the authors conducted a series of empirical experiments in which they investigated people's ability to accurately judge quantities based on different visual encodings. They found that judgments based on position along a common scale were the most accurate, followed by length-based comparisons, and then angle-based comparisons. 
+A landmark study in this area has been that of @cleveland1984. Through a series of empirical experiments, the authors investigated the accuracy with which people judge quantities based on different visual encodings. They found that quantities encoded as position along a common scale tended to produce by far the most accurate judgements, followed by length-, and angle-based encodings [@cleveland1984]. These findings were later independently replicated on larger samples [see e.g. @heer2010], and extended to other visual encodings such as hue or density [see e.g. @demiralp2014; @saket2017; @reda2018; see also @vanderplas2020]. Ultimately, researchers have used this empirical data to create rankings of visual encodings, with widely accepted order being, roughly: position, length, area, angle, hue/intensity, and shape [see e.g. @mackinlay1986; @franconeri2021; @vanderplas2020; some authors also emphasize task-dependence, see @quadri2021].
 
-The findings were later corroborated by other authors. @heer2010 replicated the @cleveland1984 study, and included judgements of circular and rectangular areas which were found to be less accurate than position, length, or angle. Other authors have extended these experiments to other visual encodings, such as color or density [e.g. @demiralp2014; @saket2017; @reda2018]. Together, these findings have been used to create rankings of visual encodings, with researchers generally agreeing on the following ordered list: position, length, area, angle, and intensity [from most effective to least, @mackinlay1986; @franconeri2021; @quadri2021].    
+Beyond @cleveland1984, there have also been many findings from cognitive research which have been shown to enhance the effectiveness of visualizations. For instance, pre-attentive processing [@treissman1985], a phenomenon in which certain salient features of visual scenes are perceived extremely rapidly and in parallel, regardless of the number of distractors, has been successfully applied to data visualizations [see @vanderplas2020; for some applied examples, see @wilke2019, pp. 34 and 35]. Similarly, research on optical illusions and misperceptions has also been used to highlight many potential data visualization pitfalls [see @franconeri2021; @ware2019].
+
+Psychology has also yielded a more high-level, conceptual set of guidelines for creating effective visualizations: the Gestalt principles of visual perception [see e.g. @cairo2012; @vanderplas2020; @ware2019]. Remarkably, these principles developed in the early 20th century by means of self-experimentation and in the absence of sound understanding of brain physiology, have stood the test of time and have been later independently validated by findings from cognitive neuroscience [@guberman2017; @ware2019]. The key Gestalt principles for data visualization are:
+
+- *Proximity*: Objects close to each other are perceived as part of a group
+- *Similarity*: Objects with similar visual attributes are also grouped together
+- *Closure/common region*: Regions with closed contours are perceived as a single, unified object
+- *Figure and ground*: One part of a visual scene is typically perceived as the primary focus (the "figure"), and the rest is perceived as its surroundings (the "ground")
+
+The Gestalt principles can be applied to visualizations in different ways. At times, they manifest without conscious effort, such as when clouds of similarly coloured points in a scatterplot are automatically perceived as clusters [thanks to principles of proximity and similarity, @rosli2015]. Other times, visualization authors may choose to exploit the principles deliberately to make a specific point, such as by grouping certain data points together by drawing a closed shape around them, or making them stand out by leveraging hue and/or saturation constrast [@cairo2012].
+
+In summary, the intersection of data visualization and visual perception is a very rich and intricate research domain, and this section has provided only an extremely brief introduction. Despite the cursory nature of this overview, I thought it important to include it, as some of the concepts discussed here will be mentioned later on in the thesis. For a more in-depth understanding, readers are referred to @franconeri2021, @vanderplas2020, @ware2019, and @cairo2012.  
 
 ### Scales and measurement {#scales-measurement}
 
