--- a/references.bib
+++ b/references.bib
@@ -589,6 +589,16 @@
   publisher={" O'Reilly Media, Inc."}
 }
 
+@article{guberman2017,
+  title={Gestalt theory rearranged: Back to Wertheimer},
+  author={Guberman, Shelia},
+  journal={Frontiers in psychology},
+  volume={8},
+  pages={1782},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
 
 @Book{		  cairo2012,
   title		= {The Functional Art: An introduction to information
